# matheusmaia.dev

./: README.md
server/: .env.example  Cargo.toml  docker-compose.yml  package.json
server/.cargo/: config.toml
server/prisma/: schema.prisma
server/prisma-cli/: Cargo.toml
server/prisma/migrations/20220710002311_init/: migration.sql
server/prisma/migrations/20220710011146_add_tag_and_post/: migration.sql
server/prisma/migrations/20220713030334_remove_tag_on_post_mid/: migration.sql
server/src/: common_types.rs  db.rs  jwt.rs  lib.rs  main.rs  prisma.rs
server/src/config/: context.rs  mod.rs
server/src/controller/: auth_controller.rs  mod.rs  post_controller.rs  tag_controller.rs
server/src/database/: mod.rs
server/src/dto/: mod.rs
server/src/repository/: mod.rs  post_repository.rs  tag_repository.rs  user_repository.rs
server/src/service/: auth_service.rs  mod.rs  post_service.rs  tag_service.rs
website/: package.json  pnpm-lock.yaml  tailwind.config.js
website/api/: auth.ts  baseQuery.tsx  post.ts  tags.ts  user.ts
website/components/: socials.tsx
website/components/form/: login.tsx
website/components/header/: homeHeader.tsx
website/components/icons/: github.tsx  linkedin.tsx  steam.tsx
website/components/layout/: Layout.tsx
website/components/ui/: button.tsx  input.tsx
website/hooks/: auth.tsx
website/pages/: _app.tsx  blog.tsx  create-post.tsx  index.tsx  login.tsx
website/store/: index.ts
website/styles/: globals.css  reset.css
website/types/: icon.d.ts  index.ts
