[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = "1.3.32"
poem-openapi = { version="2.0.2", features=["swagger-ui"] }
tokio = { version = "1.19.2", features = ["full"] }
