[package]
name = "server"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
	"prisma-cli"
]

[lib]
name = "app"
path = "src/lib.rs"

[dependencies]
poem = "1.3.32"
poem-openapi = { version="2.0.2", features=["swagger-ui"] }
tokio = { version = "1.19.2", features = ["full"] }
serde = "1.0"
dotenv = "0.15.0"
jsonwebtoken = "8.1.1"
chrono = "0.4.19"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.5.2" }
rust-argon2 = "1.0"
tracing-subscriber = "0.3.14"
