[package]
name = "server"
version = "0.1.0"
edition = "2021"

[lib]
name = "app"
path = "src/lib.rs"

[dependencies]
poem = "1.3.32"
poem-openapi = { version="2.0.2", features=["swagger-ui", "chrono"] }
tokio = { version = "1.19.2", features = ["full"] }
serde = "1.0"
dotenv = "0.15.0"
jsonwebtoken = "8.1.1"
chrono = { version="0.4.19", features=["serde"] }
rust-argon2 = "1.0"
tracing-subscriber = "0.3.14" 
slug = "0.1.4"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls", "postgres", "macros", "chrono" ] }
sqlx-page = { version = "~0.5", features=["postgres"]}